# ndi-python-stubs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/NDIlib/: NDIlib.pyi  py.typed
